# resonance

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  flake.nix
.github/workflows/: docker.yml
src/: bot.rs  main.rs
src/commands/: clear.rs  join.rs  leave.rs  loop_cmd.rs  mod.rs  normalize.rs  nowplaying.rs  pause.rs  play.rs  queue.rs  remove.rs  resume.rs  search.rs  shuffle.rs  skip.rs  stop.rs
src/player/: events.rs  media_tools.rs  mod.rs  normalized_source.rs
src/queue/: mod.rs  track.rs
src/state/: mod.rs  redis.rs
src/utils/: embeds.rs  error.rs  mod.rs
src/youtube/: search.rs
