[package]
name = "resonance"
version = "0.2.0"
edition = "2024"
rust-version = "1.91.0"
description = "A fast, feature-rich Discord music bot written in Rust"
license = "MIT"
repository = "https://github.com/jvz-devx/resonance"

[dependencies]
serenity = { version = "0.12", features = ["voice", "gateway", "rustls_backend"] }
# Using git 'next' branch for DAVE/E2EE voice encryption support (required since March 2026)
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "next", features = ["serenity", "driver", "gateway", "rustls", "builtin-queue"] }
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4"] }
rusty_ytdl = { version = "0.7", default-features = false, features = ["rustls-tls", "search", "blocking"] }
deadpool-redis = { version = "0.23", features = ["rt_tokio_1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
thiserror = "2"
rand = "0.9"
async-trait = "0.1"
